--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "gsmarena-api",
-  "version": "2.0.5",
-  "description": "Parse GSMArena and then return as JSON",
+  "name": "gsmarena-api-headless",
+  "version": "1.0.0",
+  "description": "GSMArena API with headless browser to avoid request blocks",
   "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nordmarin/gsmarena-api.git"
+  "scripts": {
+    "start": "node your-api-server-file.js" 
   },
-  "scripts": {},
   "keywords": [
     "gsmarena",
-    "api"
+    "api",
+    "playwright"
   ],
-  "author": "Kirill Potapenko (kirill.potap97@gmail.com)",
+  "author": "Seu Nome",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.2.5",
-    "cheerio": "^1.0.0-rc.10"
+    "cheerio": "^1.0.0-rc.10",
+    "playwright": "^1.42.1", 
+    "express": "^4.18.2" 
   },
   "devDependencies": {}
 }
